# k8s-advanced-webapp

./: .gitignore  README.md  idmitriev-cluster-admin-binding.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backlog/tasks/: task-1 - Draft architecture and repo layout.md  task-10 - GitHub Actions CI-CD workflows.md  task-11 - Cost control defaults and documentation.md  task-12 - Documentation and deployment scripts.md  task-2 - Terraform EKS Fargate.md  task-3 - FastAPI backend service.md  task-4 - React frontend SPA.md  task-5 - Helm chart backend.md  task-6 - Helm chart frontend.md  task-7 - Ingress controller and cert-manager.md  task-7a - End-to-end smoke test.md  task-7b - Frontend polish, failing tests, architecture cleanup, documentation.md  task-8 - Monitoring stack and dashboards.md  task-9 - Argo CD GitOps definitions.md
charts/backend/: .helmignore  Chart.yaml  values.yaml
charts/frontend/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
docs/: architecture.md  frontend-helm-chart-design.md  repo-structure.md  terraform-eks-design.md
gitops/: root.yaml
gitops/apps/: aws-load-balancer-controller.yaml  backend.yaml  cert-manager.yaml  frontend.yaml  monitoring.yaml  nginx-ingress.yaml
gitops/argocd/: install.yaml
k8s/nginx-ingress/: values.yaml
services/backend/: Dockerfile  README.md  pyproject.toml
services/backend/app/: __init__.py  crud.py  db.py  main.py  models.py
services/backend/app/routers/: notes.py
services/backend/tests/: conftest.py  test_coverage.py  test_notes.py
(+69 files in other folders)
