# [task-3]
[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Team Notes"
authors = ["Kilo Code <kilo@code.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.8.2"}
alembic = "^1.13.2"
python-multipart = "^0.0.9"
# Using async driver for sqlalchemy
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.4.2"
pytest-asyncio = "^0.23.7"
async_generator = "^1.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"